--- a/LaTeX _Assingment_Group-11.tex
+++ b/LaTeX _Assingment_Group-11.tex
@@ -64,7 +64,7 @@
               \textbf{Department: BSc in IT (Cyber Security)}
         \item \textbf{Nawazish Alam}\\
               \textbf{Roll No: 30084323041}\\
-              \textbf{Department: BSc in IT (Artificial Intelligence)}
+              \textbf{Department: BSc in IT (Data Science)}
     \end{enumerate}
     \vspace{0.8 cm}
     
