--- a/LaTeX _Assingment_Group-11.tex
+++ b/LaTeX _Assingment_Group-11.tex
@@ -199,9 +199,9 @@
 % Screenshot 1
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.8\linewidth]{LaTex_group_5/commit_history.png} % Adjusted width
+    \includegraphics[width=0.8\linewidth]{Commit ScreenShot 2024-09-14 at 4.43.53 PM} % Adjusted width
      \hspace{4 cm}
-    \caption{Screenshot of the GitHub repository showing the commit history.}
+    \caption{Screenshot of the GitHub repository showing the initial commit history.}
 \end{figure}
 
 % Screenshot 2 
@@ -262,4 +262,3 @@ The practical experience highlighted the importance of clear commit messages and
 
 
 \end{document}
-
