--- a/LaTeX _Assingment_Group-11.tex
+++ b/LaTeX _Assingment_Group-11.tex
@@ -6,12 +6,15 @@
 \usepackage{parskip}
 \usepackage{hyperref}
 \usepackage[a4paper,left=25 mm,right=25 mm, bottom=25 mm,
-    margin=1in,top=22 mm]{geometry} % Adjusting the margins
+    margin=1in,top=25 mm]{geometry} % Adjusting the margins
 \usepackage{tikz}
 \usepackage{array}
 \usepackage{tabularx}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{paralist}
+\usepackage{ragged2e}
+
 \usetikzlibrary{calc}
 
 \begin{document}
@@ -26,27 +29,27 @@
 \end{tikzpicture}
     \centering
     \vspace*{0 cm}
-    \Large
+    \LARGE
     \textbf{Maulana Abul Kalam Azad University of Technology, WB}
     \vspace{0.5cm}
     
     \includegraphics[width=0.3\textwidth]{makaut1.png} % Assuming you have the logo image
     \vspace{0.5cm}
     
-    \LARGE
+    \Large
     \textbf{\textcolor{blue!60}{Software Tools and Technology\\
         -: Lab Notebook :-}}
     \vspace{0.5cm}
     
     \large
     \textbf{\textcolor{red}{Group 11}}
-    \vspace{1 cm}
+    \vspace{0.5 cm}
     
     \textbf{Repository Link:} \href{https://github.com/Rajarshi-2005/LaTeX-Group-11}{https://github.com/Rajarshi-2005/LaTeX-Group-11}
-    \vspace{1cm}
+    \vspace{0.5cm}
     
     \textbf{\underline{\textcolor{blue!60}{Group Members}}}
-    \vspace{0.5cm}
+    \vspace{0.4cm}
 
     \normalsize
     \begin{enumerate}
@@ -66,11 +69,9 @@
               \textbf{Roll No: 30084323041}\\
               \textbf{Department: BSc in IT (Data Science)}
     \end{enumerate}
-    \vspace{0.8 cm}
+    \vspace{0.5 cm}
     
     \textbf{Instructor:} \href{mailto:ayan.ghosh@university.edu}{\textcolor{blue}{Ayan Ghosh}}\\
-    \vspace{0.2cm}
-    
     \textbf{\textit{Date: September 11, 2024}}
 
 \end{titlepage}
@@ -124,10 +125,10 @@
 \vspace{0.5 cm}
 
 \section*{\Huge{\underline{{-:GitHub:-}}}}
-\paragraph{\noindent}{GitHub is a web-based platform that allows developers to host, share, and collaborate on software projects. It provides a version control system powered by Git, enabling teams to track changes, manage code repositories, and work together seamlessly across different locations. GitHub supports collaborative development through features like pull requests, issues, and project boards, making it essential for open-source projects and professional software development. Additionally, it integrates with various development tools, enhancing productivity and streamlining the software development lifecycle.}
+\paragraph{}{GitHub is a web-based platform that allows developers to host, share, and collaborate on software projects. It provides a version control system powered by Git, enabling teams to track changes, manage code repositories, and work together seamlessly across different locations. GitHub supports collaborative development through features like pull requests, issues, and project boards, making it essential for open-source projects and professional software development. Additionally, it integrates with various development tools, enhancing productivity and streamlining the software development lifecycle.}
 
 \subsection*{\underline{-:Installation:-}}
-\paragraph{\setlength{\parindent}{0pt}}{Installing GitHub Desktop is a straightforward process that enhances your workflow by providing a user-friendly interface for managing repositories. To begin, download the installer from the [official GitHub Desktop website](https://desktop.github.com/) for your operating system—Windows or macOS. After downloading, run the installer and follow the on-screen instructions to complete the setup. Once installed, launch the application and sign in with your GitHub credentials, or create a new account if needed. GitHub Desktop simplifies the process of cloning repositories, making commits, and managing branches, making it an invaluable tool for developers of all skill levels. For Linux users, alternative methods like using Wine or other Git clients are available.}
+\paragraph{}{Installing GitHub Desktop is a straightforward process that enhances your workflow by providing a user-friendly interface for managing repositories. To begin, download the installer from the [official GitHub Desktop website](https://desktop.github.com/) for your operating system—Windows or macOS. After downloading, run the installer and follow the on-screen instructions to complete the setup. Once installed, launch the application and sign in with your GitHub credentials, or create a new account if needed. GitHub Desktop simplifies the process of cloning repositories, making commits, and managing branches, making it an invaluable tool for developers of all skill levels. For Linux users, alternative methods like using Wine or other Git clients are available.}
 
 
 \newpage
