--- a/LaTeX _Assingment_Group-11.tex
+++ b/LaTeX _Assingment_Group-11.tex
@@ -112,9 +112,8 @@
         ($(current page.south east) + (-1cm,1cm)$);
 \end{tikzpicture}
 \vspace{-2cm}
-% Lab notebook entries
-\section*{\Huge{\textcolor{blue!60}{Lab Notebook Entries}}}
 
+\section*{\Huge{\textcolor{blue!60}{Lab Notebook Entries}}}
 \subsection*{Entry by Rajarshi Biswas}
 \textit{Date: [\today]}\\
 \vspace{1 cm}
@@ -180,12 +179,12 @@ This C program is designed to function as a simple calculator, allowing users to
 
 \item Operator Checking and Calculation:
    - switch (operator): This is a conditional statement that checks the value of the operator variable.
-   - case '+':, case '-':, case '*':, case '/':: These cases handle different operators.
+   - case `+':, case `-':, case `*':, case `/':: These cases handle different operators.
    - The respective arithmetic operations are performed based on the operator and the results are stored in the result variable.
    - A check for division by zero is included to prevent errors.\\
 
 \item Output:
-   - printf("Result: ")\\
+   - printf(``Result: ")\\
 \end{enumerate}
 
 \begin{flushleft}
