--- a/LaTeX _Assingment_Group-11.tex
+++ b/LaTeX _Assingment_Group-11.tex
@@ -317,7 +317,7 @@ Other examples:\\
     \centering
     \includegraphics[width=0.8\linewidth]{LaTex_group_5/deleted_branches.png}
        \hspace{4 cm}
-    \caption{Repository after deleting branches 'feature-1' and 'feature-2'.}
+    \caption{Repository after deleting branches `feature-1' and `feature-2'.}
     \label{fig:enter-label}
 \end{figure}
 % Screenshot 4
