--- a/LaTeX _Assingment_Group-11.tex
+++ b/LaTeX _Assingment_Group-11.tex
@@ -280,7 +280,7 @@ Other examples:\\
 \vspace{-2cm}
 \subsection*{Entry by Nawazish Alam}
 \textit{Date: [\today]}\\
-\section*{\Huge{Git Assignment 4 : Branching and Merging}}
+\section*{\underline{{\LARGE{Git Assignment 4 : Branching and Merging}}}}
 
 \paragraph{Objective:} Demonstrate proficiency in Git branching, merging, and conflict resolution.
 
@@ -290,18 +290,21 @@ Other examples:\\
 % Screenshot 1
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.8\linewidth]{Commit ScreenShot 2024-09-14 at 4.43.53 PM} % Adjusted width
      \hspace{4 cm}
-    \caption{Screenshot of the GitHub repository showing the initial commit history.}
+     \includegraphics[width=0.8\linewidth]{commit.jpg} % Adjusted width
+     \hspace{4 cm}
+     \caption{Screenshot of the GitHub repository showing the initial commit history.}
 \end{figure}
 
 % Screenshot 2 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.8\linewidth]{LaTex_group_5/branching.png} % Adjusted width
+    \includegraphics[width=0.8\linewidth]{branch.png} % Adjusted width
      \hspace{4 cm}
     \caption{Screenshot of the GitHub repository showing the branching.}
 \end{figure}
+\vspace{0 cm}
+
 \newpage
 \begin{tikzpicture}
     [remember picture, overlay]
@@ -310,13 +313,11 @@ Other examples:\\
         rectangle 
         ($(current page.south east) + (-1cm,1cm)$);
 \end{tikzpicture}
-\vspace{-1.5cm}
-% Screenshot 3
-
+\vspace{1 cm}
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.8\linewidth]{LaTex_group_5/deleted_branches.png}
-       \hspace{4 cm}
+    \includegraphics[width=0.8\linewidth]{delete.png}
+    \hspace{4 cm}
     \caption{Repository after deleting branches `feature-1' and `feature-2'.}
     \label{fig:enter-label}
 \end{figure}
@@ -324,18 +325,12 @@ Other examples:\\
 \hspace{6 cm}
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.8\linewidth]{LaTex_group_5/git_log.png} % Adjusted width
+    \includegraphics[width=0.8\linewidth]{gitlog.png} % Adjusted width
     \hspace{4 cm}
     \caption{Screenshot of the local machine showing the Git log.}
 \end{figure}
 \hspace{6 cm}
 % Screenshot 5
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=0.8\linewidth]{LaTex_group_5/conflict_resolution.png} % Adjusted width
-       \hspace{4 cm}
-    \caption{Screenshot of the local machine showing conflict resolution.}
-\end{figure}
 \newpage
 \begin{tikzpicture}
     [remember picture, overlay]
@@ -344,12 +339,19 @@ Other examples:\\
         rectangle 
         ($(current page.south east) + (-1cm,1cm)$);
 \end{tikzpicture}
-\vspace{0.5 cm}
-\subsection*{\Huge{Write-Up: Experience with Git Branching and Merging}}
-\hspace{1 cm}
-\paragraph {\noindent}{This assignment focused on the use of Git branching and merging to manage features in a collaborative environment. After creating separate branches for feature-1 and feature-2, each was developed independently.
-When merging feature-1 into the main branch, there were no conflicts. However, the merge of feature-2 caused a conflict in the shared.txt file. Conflict resolution was done manually, ensuring that the changes from both branches were retained.
-The practical experience highlighted the importance of clear commit messages and Git’s branching capabilities for parallel development and conflict management.}
+\vspace{-2cm}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\linewidth]{conflict.png} % Adjusted width
+    \hspace{4 cm}
+    \caption{Screenshot of the local machine showing conflict resolution.}
+\end{figure}
 
+\subsection*{\LARGE{Write-Up: Experience with Git Branching {\underline{and Merging}}}}
+\hspace{1 cm}
+\paragraph{}
+This assignment focused on the use of Git branching and merging to manage features in a collaborative environment. After creating separate branches for feature-1 and feature-2, each was developed independently.
+When merging feature-1 into the main branch, there were no conflicts. However, the merge of feature-2 caused a conflict in the shared.txt file. Conflict resolution was done manually, ensuring that the changes from both branches were retained.
+The practical experience highlighted the importance of clear commit messages and Git’s branching capabilities for parallel development and conflict management.
 
 \end{document}
