--- a/LaTeX _Assingment_Group-11.tex
+++ b/LaTeX _Assingment_Group-11.tex
@@ -71,7 +71,7 @@
     \end{enumerate}
     \vspace{0.5 cm}
     
-    \textbf{Instructor:} \href{mailto:ayan.ghosh@university.edu}{\textcolor{blue}{Ayan Ghosh}}\\
+    \textbf{Instructor:} \href{mailto:ayan.ghosh@university.edu}{\textcolor{blue}{Ayan Ghosh \text{\&} Pabitra Pal}}\\
     \textbf{\textit{Date: September 11, 2024}}
 
 \end{titlepage}
@@ -113,9 +113,9 @@
 \end{tikzpicture}
 \vspace{-2cm}
 
-\section*{\Huge{\textcolor{blue!60}{Lab Notebook Entries}}}
-\subsection*{Entry by Rajarshi Biswas}
-\textit{Date: [\today]}\\
+\section*{\Huge{\textcolor{blue!60}{\underline{Lab Notebook Entries}}}}
+\subsection*{Entry by: Rajarshi Biswas}
+\textit{Date: [\today]}
 \vspace{1 cm}
 \begin{figure}[h!]
    \centering
@@ -139,7 +139,7 @@
         ($(current page.south east) + (-1cm,1cm)$);
 \end{tikzpicture}
 \vspace{-2cm}
-\subsection*{Entry by Agnik Dey}
+\subsection*{Entry by: Agnik Dey}
 \textit{Date: [\today]}\\
 \section*{\large{Git Assignment 2 : C program for calculator in the local
 {\underline{repository and publishing it a public repository}}}}
@@ -264,9 +264,54 @@ Other examples:\\
         ($(current page.south east) + (-1cm,1cm)$);
 \end{tikzpicture}
 \vspace{-2cm}
-\subsection*{Entry by Aditi Ghosh}
+\subsection*{Entry by: Aditi Ghosh}
 \textit{Date: [\today]}\\
-% Write your lab notebook entry here.
+\section*{\large{Git Assignment 3 : Converting a submit button to Chin Tapak \underline{Dum Dum}}}
+\paragraph{}
+\begin{flushleft}
+\text{\#}Steps to Fix the Button and Create a Pull Request:-\\
+\end{flushleft}
+\vspace{0.5 cm}
+\begin{enumerate}
+\item\textbf{Clone the Repository:}
+   - You’ve already cloned the repository using GitHub Desktop, so you should have the project on your local machine.\\
+
+\item\textbf{Open the Project:}
+   - Open the project in your preferred IDE as per the instructions in the readme.md.\\
+
+\item\textbf{Locate the Button Code:}
+   - Search for the code where the submit button is defined. This is typically found in the frontend code of the application. Depending on the technology stack used (e.g., HTML/CSS, React, Angular, etc.), it could be in a file like index.html, App.js, ButtonComponent.js, or a similar file.\\
+
+\item\textbf{Rename the Button:}
+   - You renamed the button to "Chin Tapak Dum Dum". If the button’s size became disproportionate, it’s likely due to styling issues.\\
+
+\item\textbf{Test the Application:}
+   - Run the application again to ensure that the button appears correctly and that there are no additional issues.\\
+
+\item\textbf{Commit Your Changes:}
+   - Once the button looks good, commit your changes. Use descriptive commit messages, for example: Fixed button styling after renaming.
+
+   bash
+   git add .
+   git commit -m "Fixed button styling after renaming to 'Chin Tapak Dum Dum'"
+   \\
+   
+\item\textbf{Push Your Changes:}
+   - Push your changes to your forked repository on GitHub.
+
+   bash
+   git push origin main
+   (Replace main with the correct branch name if it's different.)\\
+   
+\item\textbf{Create a Pull Request:}
+   - Go to the original repository on GitHub (the one you cloned from).
+   - You should see an option to create a pull request from your forked repository. Follow the instructions to create a pull request with a title and description of what you have done.
+
+   Make sure to mention in the pull request that you have fixed the button styling after renaming it.
+\end{enumerate}
+\vspace{0.5 cm}
+
+\textbf{Submit button link:} \href{https://github.com/Rajarshi-2005/STT/blob/main/SymbolApp.java}{https://github.com/Rajarshi-2005/STT/blob/main/SymbolApp.java}
 
 
 \newpage
@@ -278,7 +323,7 @@ Other examples:\\
         ($(current page.south east) + (-1cm,1cm)$);
 \end{tikzpicture}
 \vspace{-2cm}
-\subsection*{Entry by Nawazish Alam}
+\subsection*{Entry by: Nawazish Alam}
 \textit{Date: [\today]}\\
 \section*{\underline{{\LARGE{Git Assignment 4 : Branching and Merging}}}}
 
