--- a/LaTeX _Assingment_Group-11.tex
+++ b/LaTeX _Assingment_Group-11.tex
@@ -283,7 +283,7 @@ Other examples:\\
    - Search for the code where the submit button is defined. This is typically found in the frontend code of the application. Depending on the technology stack used (e.g., HTML/CSS, React, Angular, etc.), it could be in a file like index.html, App.js, ButtonComponent.js, or a similar file.\\
 
 \item\textbf{Rename the Button:}
-   - You renamed the button to "Chin Tapak Dum Dum". If the button’s size became disproportionate, it’s likely due to styling issues.\\
+   - You renamed the button to ``Chin Tapak Dum Dum". If the button’s size became disproportionate, it’s likely due to styling issues.\\
 
 \item\textbf{Test the Application:}
    - Run the application again to ensure that the button appears correctly and that there are no additional issues.\\
@@ -293,7 +293,7 @@ Other examples:\\
 
    bash
    git add .
-   git commit -m "Fixed button styling after renaming to 'Chin Tapak Dum Dum'"
+   git commit -m ``Fixed button styling after renaming to `Chin Tapak Dum Dum'"
    \\
    
 \item\textbf{Push Your Changes:}
