--- a/LaTeX _Assingment_Group-11.tex
+++ b/LaTeX _Assingment_Group-11.tex
@@ -13,6 +13,8 @@
 \usepackage{tabularx}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage[absolute,overlay]{textpos}
+\usepackage{geometry}
 \usepackage{paralist}
 \usepackage{ragged2e}
 \usetikzlibrary{calc}
@@ -43,13 +45,13 @@
     
     \large
     \textbf{\textcolor{red}{Group 11}}
-    \vspace{0.5 cm}
+    \vspace{0.3 cm}
     
-    \textbf{Repository Link:} \href{https://github.com/Rajarshi-2005/LaTeX-Group-11}{https://github.com/Rajarshi-2005/LaTeX-Group-11}
-    \vspace{0.5cm}
+    \textbf{Repository Link:} $\href{https://github.com/Rajarshi-2005/LaTeX_Assignment_Group-11}{https://github.com/Rajarshi-2005/LaTeX_Assignment_Group-11}$
+    \vspace{0.3cm}
     
     \textbf{\underline{\textcolor{blue!60}{Group Members}}}
-    \vspace{0.4cm}
+    \vspace{0.3cm}
 
     \normalsize
     \begin{enumerate}
@@ -69,7 +71,7 @@
               \textbf{Roll No: 39959223039}\\
               \textbf{Department: BSc in Forensic Science}
     \end{enumerate}
-    \vspace{0.5 cm}
+    \vspace{0.3 cm}
     
     \textbf{Instructor:} \href{mailto:ayan.ghosh@university.edu}{\textcolor{blue}{Ayan Ghosh \text{\&} Pabitra Pal}}\\
     \textbf{\textit{Date: September 11, 2024}}
@@ -102,6 +104,13 @@ Finally, we thank our friends for their understanding and encouragement during o
 
 This project would not have been possible without the contributions of all these individuals. Thank you!}
 \end{flushleft}
+\setlength{\TPHorizModule}{1cm}
+\setlength{\TPVertModule}{1cm}
+\begin{textblock}{5}(13,26)
+    \raggedleft
+    \textit{Your name}
+\end{textblock}
+
 
 \newpage
 \begin{tikzpicture}
